--- a/honey.css
+++ b/honey.css
@@ -10,121 +10,500 @@
 html,body{
     background-color:#E7EBEE;
 }
-p,ul,h3,a{
-    font-family: Moonglade;
-}
-.header-section-1{
-    position:relative;   
-    width: 100%;
-    height:350px;
-    font-size: 18px;
-    background: center url("pics/honey-header.jpg") no-repeat;
-    background-size: 2000px;
-}
-.header-section-2{
-    position: relative;
-    float:right;
-    top:20px;
-    font-size:20px;
-}
-
-.header-section-2 a{
-    text-align: center;    
-    color: rgb(51, 17, 17);
-    text-decoration: none;
-    font-size:35px;
+@media only screen and (min-width: 1000px) and (min-height: 1000px){
+    p,ul,h3,a{
+        font-family: Moonglade;
+    }
+    .main-header-section{
+        position:relative;   
+        width: 100%;
+        height:350px;
+        font-size: 18px;
+        background: center url("pics/honey-header.jpg") no-repeat;
+        background-size: 2000px;
+    }
+    .header-section-1{
+        position: relative;
+        float:right;
+        top:20px;
+        font-size:20px;
+    }
     
-}
-.header-section-2 a:hover{    
-    color: rgb(51, 17, 17);
-    background-color: transparent;
-    text-decoration: underline;
-}
-a:focus{
-    outline:none;
-}
-
-.header-section-3 h1, #sub-header{
-    text-align:left;
-    color: rgb(236, 187, 52);
-}
-.honey-font{
-    font-family: SeasideResort;
-    font-size: 80px;
-
-}
-#sub-header{
-    font-size:40px;
-    left:30px;
-}
-.body-section-2{
-    position: relative;
-    font-size:23px;
-    top:50px;
-    background-color:rgb(241, 217, 191);
-    height:500px;
-    text-align:center;
-}
-.body-section-2 .content{
-    padding-top:20px;
-    text-align: right;
-    padding:50px;
-    color:rgb(150, 80, 40);
-    font-size:30px;
-}
-.body-section-2 h3{
-    font-size:40px;
-    right:100px;
-    color: rgb(202, 79, 8);
-}
-#content1{
-    text-align:left;
-}
-
-#honey-jar{
-    width:410px;
-    height:410px;
-    float: left;
-    padding:30px;
-    padding-left:10px;
+    .header-section-1 a{
+        text-align: center;    
+        color: rgb(51, 17, 17);
+        text-decoration: none;
+        font-size:35px;
+        
+    }
+    .header-section-1 a:hover{    
+        color: rgb(51, 17, 17);
+        background-color: transparent;
+        text-decoration: underline;
+    }
+    a:focus{
+        outline:none;
+    }
     
+    .header-section-2 h1, #sub-header{
+        text-align:left;
+        color: rgb(236, 187, 52);
+    }
+    .honey-font{
+        font-family: SeasideResort;
+        font-size: 80px;
+    
+    }
+    #sub-header{
+        font-size:40px;
+        left:30px;
+    }
+    .body-section-2{
+        position: relative;
+        font-size:23px;
+        top:50px;
+        background-color:rgb(241, 217, 191);
+        height:500px;
+        text-align:center;
+    }
+    .body-section-2 .content{
+        padding-top:20px;
+        text-align: right;
+        padding:50px;
+        color:rgb(150, 80, 40);
+        font-size:30px;
+    }
+    .body-section-2 h3{
+        font-size:40px;
+        right:100px;
+        color: rgb(202, 79, 8);
+    }
+    #content1{
+        text-align:left;
+    }
+    
+    #honey-jar{
+        width:410px;
+        height:410px;
+        float: left;
+        padding:30px;
+        padding-left:10px;
+        
+    }
+    .body-section-3{
+        position: relative;
+        font-size:23px;
+        top:25px;
+        background-color:rgb(241, 217, 191);
+        height:500px;
+        padding:30px;
+    }
+    #honeybee{
+        float:right;
+        width: 500px;
+        height:390px;
+        padding:20px
+    }
+    .body-section-3 h3{
+        color: rgb(202, 79, 8);
+        font-size:40px;
+        float:left;
+        margin-top:300px;
+    }
+    .body-section-3 ul{
+        padding:40px;
+        color:rgb(146, 59, 9);
+        margin-left:900px;
+        padding:100px;
+        font-size:35px;
+    }
+    .body-section-4{
+        font-size: 35px;
+        position: relative;
+        bottom:0;
+    }
+    #contact p{
+        padding-top:20px;
+        float:left;
+    }
+    #about p{
+        float:right;
+    }
 }
-.body-section-3{
-    position: relative;
-    font-size:23px;
-    top:25px;
-    background-color:rgb(241, 217, 191);
-    height:500px;
-    padding:30px;
+@media screen and (min-width: 1024px) and (max-height: 1310px){
+    p,ul,h3,a{
+        font-family: Moonglade;
+    }
+    .main-header-section{
+        position:relative;   
+        width: 100%;
+        height:350px;
+        font-size: 18px;
+        background: center url("pics/honey-header.jpg") no-repeat;
+        background-size: 2000px;
+    }
+    .header-section-1{
+        position: relative;
+        float:right;
+        top:20px;
+        font-size:20px;
+    }
+    
+    .header-section-1 a{
+        text-align: center;    
+        color: rgb(51, 17, 17);
+        text-decoration: none;
+        font-size:35px;
+        
+    }
+    .header-section-1 a:hover{    
+        color: rgb(51, 17, 17);
+        background-color: transparent;
+        text-decoration: underline;
+    }
+    a:focus{
+        outline:none;
+    }
+    
+    .header-section-2 h1, #sub-header{
+        text-align:left;
+        color: rgb(236, 187, 52);
+    }
+    .honey-font{
+        font-family: SeasideResort;
+        font-size: 80px;
+    
+    }
+    #sub-header{
+        font-size:40px;
+        left:30px;
+    }
+    .body-section-2{
+        position: relative;
+        font-size:23px;
+        top:50px;
+        background-color:rgb(241, 217, 191);
+        height:500px;
+        text-align:center;
+    }
+    .body-section-2 .content{
+        padding-top:20px;
+        text-align: right;
+        padding:50px;
+        color:rgb(150, 80, 40);
+        font-size:30px;
+    }
+    .body-section-2 h3{
+        font-size:40px;
+        right:100px;
+        color: rgb(202, 79, 8);
+    }
+    #content1{
+        text-align:left;
+    }
+    
+    #honey-jar{
+        width:410px;
+        height:410px;
+        float: left;
+        padding:30px;
+        padding-left:10px;
+        
+    }
+    .body-section-3{
+        position: relative;
+        font-size:23px;
+        top:25px;
+        background-color:rgb(241, 217, 191);
+        height:500px;
+        padding:30px;
+    }
+    #honeybee{
+        float:right;
+        width: 500px;
+        height:390px;
+        padding:20px
+    }
+    .body-section-3 h3{
+        color: rgb(202, 79, 8);
+        font-size:40px;
+        float:left;
+        margin-top:300px;
+    }
+    .body-section-3 ul{
+        padding:40px;
+        color:rgb(146, 59, 9);
+        margin-left:900px;
+        padding:100px;
+        font-size:35px;
+    }
+    .body-section-4{
+        font-size: 35px;
+        position: relative;
+        bottom:0;
+    }
+    #contact p{
+        padding-top:20px;
+        float:left;
+    }
+    #about p{
+        float:right;
+    }
 }
-#honeybee{
-    float:right;
-    width: 500px;
-    height:390px;
-    padding:20px
+
+@media only screen and (min-width: 582px) and (min-height: 891px){
+    p,ul,h3,a{
+        font-family: Moonglade;
+    }
+    .main-header-section{
+        position:relative;   
+        width: 100%;
+        height:350px;
+        font-size: 18px;
+        background: center/contain url("pics/honey-header.jpg") no-repeat;
+        background-size: 890px;
+    }
+    .header-section-1{
+        position: relative;
+        float:right;
+        top:20px;
+        font-size:20px;
+    }
+    
+    .header-section-1 a{
+        text-align: center;    
+        color: rgb(51, 17, 17);
+        text-decoration: none;
+        font-size:20px;
+        
+    }
+    .header-section-1 a:hover{    
+        color: rgb(51, 17, 17);
+        background-color: transparent;
+        text-decoration: underline;
+    }
+    a:focus{
+        outline:none;
+    }
+    
+    .header-section-2 {
+        padding-top:240px;
+        text-align:center;
+        color: rgb(236, 187, 52);
+        
+    }
+    .honey-font{
+        font-family: SeasideResort;
+        font-size: 40px;
+        bottom: 300px;
+    }
+    #sub-header{
+        font-size:20px;
+        left:37px;
+    }
+    .body-section-2{
+        position: relative;
+        font-size:23px;
+        top:50px;
+        background-color:rgb(241, 217, 191);
+        height:750px;
+        text-align:center;
+    }
+    .body-section-2 .content{       
+        text-align: right;
+        padding:50px;
+        color:rgb(150, 80, 40);
+        font-size:20px;
+    }
+    .body-section-2 h3{
+        font-size:39px;
+        right:100px;
+        color: rgb(202, 79, 8);
+    }
+    #content1{
+        text-align:left;
+    }
+    
+    #honey-jar{
+        width:310px;
+        height:210px;
+        float: left;
+        padding:30px;
+        padding-left:10px;
+        
+    }
+    .body-section-3{
+        position: relative;
+        font-size:23px;
+        top:20px;
+        background-color:rgb(241, 217, 191);
+        height:300px;
+        padding:20px;
+    }
+    #honeybee{
+        float:right;
+        width: 290px;
+        height:200px;
+        padding:10px;
+        margin-top:10px;
+        
+    }
+    .body-section-3 h3{
+        color: rgb(202, 79, 8);
+        font-size:39px;
+        float:left;
+        margin-top:-350px;
+    }
+    .body-section-3 ul{
+        padding:20px;
+        margin-top:-10px;
+        color:rgb(146, 59, 9);
+        margin-left:10px;        
+        font-size:20px;
+    }
+    .body-section-4{
+        font-size: 35px;
+        position: relative;
+        bottom:0;
+        height:200px;
+    }
+    #contact p{
+        text-align:left;
+        font-size:20px;
+        padding-top:20px;
+    }
+    #about p{
+        text-align:left;
+        font-size:20px;
+    }
+    #desc-about{
+        text-align: left;
+        font-size:15px;
+    }
+    #desc-contact{
+       
+    }
+
 }
-.body-section-3 h3{
-    color: rgb(202, 79, 8);
-    font-size:40px;
-    float:left;
-    margin-top:300px;
-}
-.body-section-3 ul{
-    padding:40px;
-    color:rgb(146, 59, 9);
-    margin-left:900px;
-    padding:100px;
-    font-size:35px;
-}
-.body-section-4{
-    font-size: 35px;
-    position: relative;
-    bottom:0;
-}
-#contact p{
-    padding-top:20px;
-    float:left;
-}
-#about p{
-    float:right;
+@media only screen and (min-resolution: 180dpi){
+    p,ul,h3,a{
+        font-family: Moonglade;
+    }
+    .main-header-section{
+        position:relative;   
+        width: 100%;
+        height:350px;
+        font-size: 18px;
+        background: center/contain url("pics/honey-header.jpg") no-repeat;
+        background-size: 890px;
+    }
+    .header-section-1{
+        position: relative;
+        float:right;
+        top:20px;
+        font-size:20px;
+    }
+    
+    .header-section-1 a{
+        text-align: center;    
+        color: rgb(51, 17, 17);
+        text-decoration: none;
+        font-size:20px;
+        
+    }
+    .header-section-1 a:hover{    
+        color: rgb(51, 17, 17);
+        background-color: transparent;
+        text-decoration: underline;
+    }
+    a:focus{
+        outline:none;
+    }
+    
+    .header-section-2 {
+        padding-top:240px;
+        text-align:center;
+        color: rgb(236, 187, 52);
+        
+    }
+    .honey-font{
+        font-family: SeasideResort;
+        font-size: 50px;
+        bottom: 300px;
+    }
+    #sub-header{
+        font-size:20px;
+        left:37px;
+    }
+    .body-section-2{
+        position: relative;
+        font-size:23px;
+        top:50px;
+        background-color:rgb(241, 217, 191);
+        height:500px;
+        text-align:center;
+    }
+    .body-section-2 .content{
+       
+        text-align: right;
+        padding:50px;
+        color:rgb(150, 80, 40);
+        font-size:30px;
+    }
+    .body-section-2 h3{
+        font-size:40px;
+        right:100px;
+        color: rgb(202, 79, 8);
+    }
+    #content1{
+        text-align:left;
+    }
+    
+    #honey-jar{
+        width:410px;
+        height:410px;
+        float: left;
+        padding:30px;
+        padding-left:10px;
+        
+    }
+    .body-section-3{
+        position: relative;
+        font-size:23px;
+        top:25px;
+        background-color:rgb(241, 217, 191);
+        height:500px;
+        padding:30px;
+    }
+    #honeybee{
+        float:right;
+        width: 500px;
+        height:390px;
+        padding:20px
+    }
+    .body-section-3 h3{
+        color: rgb(202, 79, 8);
+        font-size:40px;
+        float:left;
+        margin-top:300px;
+    }
+    .body-section-3 ul{
+        padding:40px;
+        color:rgb(146, 59, 9);
+        margin-left:900px;
+        padding:100px;
+        font-size:35px;
+    }
+    .body-section-4{
+        font-size: 35px;
+        position: relative;
+        bottom:0;
+    }
+    #contact p{
+        padding-top:20px;
+        float:left;
+    }
+    #about p{
+        float:right;
+    }
 }
